@@ -222,6 +222,7 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - pulsemanager.{cpp,h}: implement start_win () as part of Windows
       functionality.
     - pulsemanager.cpp: also load module-esound-protocol-tcp module.
+    - pulsemanager.cpp: make generate_server_config () Windows-compatible.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
